# rust-slack-web-api

./: .gitignore  Cargo.toml  readme.md
src/: builder.rs  error.rs  lib.rs
src/api/: chat.rs  files.rs  mod.rs  users.rs
src/entity/: mod.rs
src/entity/block_kit/: block.rs  block_element.rs  composition_objects.rs  mod.rs
src/entity/response/: metadata.rs  mod.rs  users.rs
src/entity/types/: file.rs
tests/: test_chat.rs  test_file.rs  test_users.rs
