[package]
name = "slack-web-api"
version = "0.1.0"
edition = "2021"

authors = ["uiuifree"]
description = "SlackWebAPI for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["Slack", "SlackWebAPI"]
[dependencies]
#reqwest = { version = "0.11", features = ["json"] }
# Json
serde = { version = "~1" }
serde_json = "~1"
serde_derive = "~1"
hyper = { version = "0.14.26", features = ["http2"] }
hyper-tls = "0.5.0"

multipart = { version = "0.18", features = ["default"] }
[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
